Remove Dmaap from apex-pdp
Issue-ID: POLICY-4402
Signed-off-by: rameshiyer27 <ramesh.murugan.iyer@est.tech>
Change-Id: I76c284b6ff7ec0ce77189f3f2bc93d5b91d4eb24